updated user api and docs created
